hphp/test/zend/bad/ext/spl/tests/spl_maxheap_compare_basic.php
<?php

class MyHeap extends SplMaxHeap
{
    public function testCompare()
    {
        return parent::compare(1);
    }
}

$heap = new MyHeap();
$heap->testCompare();

?>